# server/controllers/usersController.ts
@@ -1,24 +1,12 @@
-import { User } from "../models/users";
+import {getAll} from '../services/users.service'
 import { Request, Response } from 'express';
+import { User } from "../models/users";
+
 
 import express from 'express';
 const router = express.Router();
-router.get('/', async (req: Request, res: Response) => {
-    try {
-        const users = await User.findAll();
-
-        if (!users) {
-            return res.status(404).json({ message: 'User not found' });
-        }
-
-        res.status(200).json(users);
-    } catch (err) {
-
-        res.status(500).json({ message: 'Internal server error' });
-
-        console.error('Error:', err);
-    }
-});
+//const  {getAll} = require( '../services/users.service')
+router.get('/', getAll);
 router.get('/:id', async (req: Request, res: Response) => {
     try {
         const users = await User.findOne({
